sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:8: error: not found: value from
		for (i <- from debut to fin) {
                          ^AlgCocktailSort2:15: error: not found: value from
		for (i <- from fin to debut by -1) {
                          ^