sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var debut=0;
	var fin=getNombreValeurs()-2;
	var sorted : Boolean = false;
	do {
		sorted = true;
		for (i <- from debut to fin) {
			if (plusPetit(i,i+1)) {
				echange(i,i+1);
				sorted = false;
				fin -=1;
			}
		}
		for (i <- from fin to debut by -1) {
			if (plusPetit(i,i+1)) {
				echange(i,i+1);
				sorted = false;
				debut +=1;
			}
		}
	} while (!sorted);
}
